--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,30 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Dependencies
+node_modules/
+package-lock.json
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
+# Build outputs
+dist/
+build/
 
-# testing
-/coverage
+# Logs
+logs/
+*.log
 
-# production
-/build
+# Testing
+coverage/
+*.test.js.snap
 
-# misc
-.DS_Store
+# Environment variables
+.env
 .env.local
-.env.development.local
-.env.test.local
-.env.production.local
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# IDE settings
+.vscode/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+
+# Other system files
+.DS_Store
+Thumbs.db
